syntax = "proto3";

package keyvalue;

// Define the key-value service
service RaftService {
  
}

